# conan-example-library

./: CMakeLists.txt  conanfile.py
include/: dena.h  mylibrary.h
src/: dena.cc  dena_internal.cc  dena_internal.h  mylibrary.cc  mylibrary_internal.cc  mylibrary_internal.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
